2005-09-05  Martin Baulig  <martin@ximian.com>
	* backends/mono/MonoMember.cs (MonoMember.Position): Removed.

	* backends/mono/MonoLanguageBackend.cs
	(MonoDebuggerSupport.GetMethodIndex): Removed.


svn path=/trunk/debugger/; revision=49458

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-09-05  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono/MonoMember.cs (MonoMember.Position): Removed.
+
+	* backends/mono/MonoLanguageBackend.cs
+	(MonoDebuggerSupport.GetMethodIndex): Removed.
+
+2005-09-05  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono/MonoLanguageBackend.cs
 	(MonoDebuggerSupport): Moved here from the symbol writer.
 
