--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-09-06  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/ITargetFundamentalType.cs
+	(FundamentalKind): New public enum.
+	(ITargetFundamentalType.Type): Removed.
+	(ITargetFundamentalType.FundamentalKind): New property.
+
 2005-09-05  Martin Baulig  <martin@ximian.com>
 
 	* backends/mono/MonoMember.cs (MonoMember.Position): Removed.
