--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-09-07  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono/MonoFunctionType.cs (MonoFunctionType):
+	Implement IMonoTypeInfo and merged with MonoFunctionTypeInfo.
+
+	* backends/mono/MonoFunctionTypeInfo.cs: Removed.
+
+2005-09-07  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono/MonoFundamentalType.cs (MonoFundamentalType):
 	Implement IMonoTypeInfo and merged with MonoFundamentalTypeInfo.
 
