--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-09-07  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetObject.cs (ITargetObject.TypeInfo): Removed.
+	(ITargetObject.Type): New property.
+
+2005-09-07  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetType.cs
 	(ITargetType.Size): New property; moved here from ITargetTypeInfo.
 	(ITargetType.HasFixedSize): Likewise.
