2005-09-07  Martin Baulig  <martin@ximian.com>
	* interfaces/ITargetMemoryAccess.cs
	(ITargetAccess.RuntimeInvoke): Take an `ITargetFunctionObject'
	instead of a `TargetAddress'.


svn path=/trunk/debugger/; revision=49636

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-09-07  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetMemoryAccess.cs
+	(ITargetAccess.RuntimeInvoke): Take an `ITargetFunctionObject'
+	instead of a `TargetAddress'.
+
+2005-09-07  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetFunctionObject.cs
 	(ITargetFunctionObject.Invoke): Added `ITargetAccess target' and
 	`ITargetObject instance' arguments.
