--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-09-07  Martin Baulig  <martin@ximian.com>
 
+	* backends/SingleSteppingEngine.cs
+	(SingleSteppingEngine.ProcessChildEvent): Handle exceptions first.
+
+2005-09-07  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetFunctionObject.cs
 	(ITargetFunctionObject.Invoke): Removed the `bool debug' argument.
 
