2005-09-09  Martin Baulig  <martin@ximian.com>
	* interfaces/ITargetFunctionObject.cs: Removed.


svn path=/trunk/debugger/; revision=49779

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-09-09  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetFunctionObject.cs: Removed.
+
+2005-09-09  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ITargetStructObject.cs
 	(ITargetStructObject.GetMethod): Removed.
 
