--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-09-09  Martin Baulig  <martin@ximian.com>
 
+	* backends/SingleSteppingEngine.cs
+	(OperationWrapper.DoProcessEvent): Step into non-trampoline
+	method calls.
+
+	* tests/mono-debugger.tests/TestDelegate.exp: Added test case for
+	that.
+
+2005-09-09  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ILanguage.cs
 	(ILanguage.DelegateType): New property.
 	(ILanguage.ExceptionType): Changed type from `ITargetType' to
